# skillix-backend

./: .env.example  .eslintignore  .firebaserc  .gitignore  AGENTS.md  Dockerfile  FIREBASE_DATA_CONNECT_REQUIREMENTS.md  FRONTEND_PROMPT.md  README.md  cloudbuild.yaml  docker-compose.yml  jest.config.js  package.json  pyproject.toml  requirements.txt  test_onboarding.py  tsconfig.json
agents/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
agents/api/: main.py
agents/api/auth/: middleware.py
agents/api/routes/: auth.py  content.py
agents/skillix_agents/: __init__.py  config.py  content_generator.py  dataconnect_config.py  learning_planner.py  orchestrator.py
agents/src/: __init__.py  config.py  main.py  test_local.py
agents/src/api/: __init__.py
agents/src/api/providers/: __init__.py  apple.py  google.py
agents/src/api/routes/: __init__.py  adk_routes.py  onboarding.py
agents/src/skillix_agents/: __init__.py  analytics_agent.py  config.py  content_generator.py  dataconnect_nodejs_bridge.py  learning_planner.py  orchestrator.py  pedagogical_expert.py  ski_personality.py  ski_the_fox.py  skill_analyzer.py  team_coordinator.py  test_agents.py
dataconnect/: README.md  dataconnect.yaml
dataconnect-bridge/: Dockerfile  README.md  package.json  server.js
dataconnect-bridge/middleware/: auth.js
dataconnect-bridge/routes/: dataconnect.js
deploy/: README.md  cloudbuild-agents.yaml  cloudbuild-bridge.yaml  deploy.sh
scripts/: test-logger.sh
src/: __init__.py  app.ts  cli.py  config.py  main.py
test-logs/: README.md
(+119 files in other folders)
